[tool.poetry]
name = "11-fastapi"
version = "0.1.0"
description = ""
authors = ["legendarym4x <maxwel842@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
